# AttestationAssignment

./: .env.sample  .flake8  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
sales_network/: admin.py  models.py  paginators.py  permissions.py  serializers.py  urls.py  views.py
sales_network/migrations/: 0001_initial.py  0002_networknode_user_product_user.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
