[tool.poetry]
name = "attestationassignment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.2.0"
isort = "^6.0.1"
django = "^5.2.3"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "^5.5.0"
dotenv = "^0.9.9"
django-filter = "^25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
